<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".signup">

    <androidx.appcompat.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="#fff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/RL_signup"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:id="@+id/app_logo"
                android:src="@drawable/logo"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="8pt"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_logo"
                android:id="@+id/name_Layout"
                android:layout_marginHorizontal="12pt"
                android:layout_marginBottom="3pt">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_field"
                    android:hint="@string/name"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_Layout"
                android:layout_below="@+id/name_Layout"
                android:layout_marginHorizontal="12pt"
                android:layout_marginTop="3pt"
                android:layout_marginBottom="3pt">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_field"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_Layout"
                android:layout_below="@+id/email_Layout"
                android:layout_marginHorizontal="12pt"
                android:layout_marginTop="3pt"
                android:layout_marginBottom="3pt">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone_field"
                    android:hint="@string/phone"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_Layout"
                android:layout_below="@+id/phone_Layout"
                android:layout_marginHorizontal="12pt"
                android:layout_marginTop="3pt"
                android:layout_marginBottom="3pt">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_field"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_password_Layout"
                android:layout_below="@+id/password_Layout"
                android:layout_marginHorizontal="12pt"
                android:layout_marginTop="3pt"
                android:layout_marginBottom="3pt">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm_password_field"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_btn"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/confirm_password_Layout"
                android:layout_marginHorizontal="40pt"
                android:layout_marginTop="8pt"
                android:layout_marginBottom="4pt"
                android:paddingHorizontal="5pt"
                android:paddingVertical="8pt" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_as_vendor_btn"
                android:text="@string/suav"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:layout_below="@+id/sign_up_btn"
                android:textSize="11pt"
                android:layout_marginHorizontal="40pt"
                android:layout_marginTop="4pt"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/already_have_acc"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:layout_below="@+id/sign_up_as_vendor_btn"
                android:textSize="8pt"
                android:layout_marginHorizontal="40pt"
                android:layout_marginTop="6pt"/>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>